--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rm -rf dist; tsc -p tsconfig.json",
     "lint": "eslint src",
-    "swap": "node dist/doSwap.js"
+    "swap": "ts-node src/doSwap.ts"
   },
   "repository": {
     "type": "git",
