--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "rm -rf dist; tsc -p tsconfig.json",
     "lint": "eslint src",
-    "swap": "ts-node src/doSwap.ts"
+    "swap": "ts-node src/doSwap.ts",
+    "test": "ts-node src/getPrice.ts"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,12 @@
   },
   "homepage": "https://github.com/Apricot-Finance/solana-swaps-js#readme",
   "dependencies": {
+    "@project-serum/borsh": "^0.2.3",
+    "@project-serum/serum": "^0.13.61",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.29.0",
+    "buffer-layout": "^1.2.2",
+    "decimal.js": "^10.3.1",
     "tiny-invariant": "^1.1.0"
   },
   "devDependencies": {
