--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,6 @@
   "compilerOptions": {
     "target": "es5",                                     /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
-    // output .d.ts declaration files for consumers
-    "declaration": true,
-    // output .js.map sourcemap files for consumers
-    "sourceMap": true,
     "rootDirs": ["src"],
     "outDir": "dist",
     "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
@@ -14,9 +10,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-    "strict": true,                                      /* Enable all strict type-checking options. */
-    "noUnusedLocals": true,                           /* Enable error reporting when a local variables aren't read. */
-    "noUnusedParameters": true,                       /* Raise an error when a function parameter isn't read */
-    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+    "noImplicitAny": false,
+    "resolveJsonModule": true,
   }
 }
