--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@project-serum/borsh": "^0.2.3",
     "@project-serum/serum": "^0.13.61",
+    "@solana/buffer-layout-utils": "^0.1.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.29.0",
     "buffer-layout": "^1.2.2",
