--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "noImplicitAny": false,
     "resolveJsonModule": true,
+    "strict": true,
   }
 }
